WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259381
REGRESSION(
264051@main
): Caused a release assertion failure in RenderBlock::endAndCommitUpdateScrollInfoAfterLayoutTransaction
https://bugs.webkit.org/show_bug.cgi?id=259381
Summary
REGRESSION(264051@main): Caused a release assertion failure in RenderBlock::e...
WebKit Commit Bot
Reported
2023-07-20 17:15:55 PDT
https://commits.webkit.org/264051@main
introduced a regression: Caused a release assertion failure in RenderBlock::endAndCommitUpdateScrollInfoAfterLayoutTransaction This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 264051@main
(5.42 KB, patch)
2023-07-20 17:16 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2023-07-20 17:16:04 PDT
Created
attachment 467082
[details]
REVERT of
264051@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2023-07-20 17:21:14 PDT
Committed
266193@main
(f703c1ce15c6): <
https://commits.webkit.org/266193@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467082
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-07-20 17:22:17 PDT
<
rdar://problem/112629377
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug