Cherry-pick f703c1ce15c6. rdar://problem/112426557

Cherry-pick 266193@main (f703c1ce15c6). https://bugs.webkit.org/show_bug.cgi?id=259381

        Unreviewed, reverting 264051@main.
        https://bugs.webkit.org/show_bug.cgi?id=259381

        Caused a release assertion failure in RenderBlock::endAndCommitUpdateScrollInfoAfterLayoutTransaction

        Reverted changeset:

        "Deploy LayoutDisallowedScope in LayoutPhase::InRenderTreeLayout"
        https://bugs.webkit.org/show_bug.cgi?id=256661
        https://commits.webkit.org/264051@main

        Canonical link: https://commits.webkit.org/266193@main

Identifier: 265870.222@safari-7616-branch